ft: create database config to connect local database

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZWFzeS1qYWd1YXItMzcuY2xlcmsuYWNjb3VudH
 CLERK_SECRET_KEY=sk_test_arrZwqnh6fKNu3L3TLiKu1vvShDesFw7UfbD5x8DLZ
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+
+MONGO_URL=mongodb://localhost:27017/sepkey-chat-app
