--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@clerk/nextjs": "^5.2.4",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.19.3",
